Notificação e classe base de serviço

--- a/src/Biblioteca.Business/Biblioteca.Business.csproj
+++ b/src/Biblioteca.Business/Biblioteca.Business.csproj
@@ -6,8 +6,10 @@
 
   <ItemGroup>
     <Folder Include="Interfaces\Services\" />
-    <Folder Include="Services\" />
-    <Folder Include="Notifications\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="10.3.3" />
   </ItemGroup>
 
 </Project>
