Autliazação do Readme e Criando as controller de LIVROS e AUTORES

--- a/src/Biblioteca.API/appsettings.json
+++ b/src/Biblioteca.API/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Biblioteca;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Biblioteca;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "SqliteConnection": "Data Source=../../DataBase/Biblioteca.db"
   },
   "Logging": {
     "LogLevel": {
