Configurando JWT, correção da  autorização e adicionado um novo método no repositorio de livro

--- a/src/Biblioteca.API/appsettings.json
+++ b/src/Biblioteca.API/appsettings.json
@@ -10,5 +10,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWTSettings" : {
+    "Secret" : "somethingyouwantwhichissecurewillworkk",
+    "ExpiracaoHoras" : 2,
+    "Emissor" : "Biblioteca.API",
+    "ValidoEm" : "http://localhost"
+  }
 }
